welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    if (b<=13&&b=>19){
             ^